--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,15 @@ a {
     text-decoration: none;
 }
 
+button {
+    font-family: inherit;
+    color: currentColor;
+}
+
+input {
+    font-family: inherit;
+}
+
 ul {
     list-style-type: none;
     margin-top: 0;
@@ -491,4 +500,51 @@ overflow: hidden;
 .footer-link-item:hover,
 .footer-link-item:focus {
     background-color: #31D0AA;
+}
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    width: 453px;
+    height: 80px;
+    margin-left: 80px;
+}
+
+.form-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.form-label {
+    display: flex;
+}
+
+.form-input {
+    display: flex;
+    margin-right: 24px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.form-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+}
+
+.form-btn-icon {
+    fill: #ffffff;
 }
