--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ h1 {
     margin: 0 auto 48px;
 }
 
-button {
+.button-text {
     display: block;
     min-width: 169px;
     height: 56px;
@@ -167,20 +167,17 @@ button {
     border-radius: 4px;
     margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-button:hover,
-button:focus {
-background: #404bbf;
-}
-
-.button-text {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
+}
+
+.button-text:hover,
+.button-text:focus {
+background: #404bbf;
 }
 
 .second-sect {
@@ -590,7 +587,7 @@ input::placeholder {
     padding: 24px;
 }
 
-.modal button {
+.btn-close {
     position: absolute;
     top: 24px;
     right: 24px;
