--- a/css/styles.css
+++ b/css/styles.css
@@ -595,6 +595,12 @@ input::placeholder {
     position: absolute;
     top: 24px;
     right: 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 100%;
+    background-color: #e7e9fc;
+    width: 24px;
+    height: 24px;
 }
 
 .modal-title {
@@ -663,4 +669,30 @@ input::placeholder {
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     resize: none;
+}
+
+.btn-send {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    padding: 16px 32px;
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    background: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-send:hover {
+    background-color: #404bbf;
 }
