--- a/css/styles.css
+++ b/css/styles.css
@@ -576,6 +576,16 @@ input::placeholder {
     width: 100%;
     height: 100%;
     background: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    position: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    position: auto;
 }
 
 .modal {
@@ -595,20 +605,31 @@ input::placeholder {
     position: absolute;
     top: 24px;
     right: 24px;
-    cursor: pointer;
-    border-radius: 100%;
-    background-color: #e7e9fc;
-    border: rgba(0, 0, 0, 0.1);
-    border-width: 1px;
     width: 24px;
     height: 24px;
+    border-radius: 50%;
+    padding: 0;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #e7e9fc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-close:hover {
-    background-color:#404bbf;
+.btn-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-close-icon:hover {
+.btn-close:hover,
+.btn-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.btn-close:hover > .btn-close-icon, 
+.btn-close:focus > .btn-close-icon {
     fill: #fff;
 }
 
