--- a/css/styles.css
+++ b/css/styles.css
@@ -552,7 +552,8 @@ overflow: hidden;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-btn:hover {
+.form-btn:hover,
+.form-btn:focus {
     background-color: #404bbf;
 }
 
@@ -579,7 +580,7 @@ input::placeholder {
     opacity: 0;
     visibility: hidden;
     position: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -599,6 +600,7 @@ input::placeholder {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-close {
@@ -615,7 +617,7 @@ input::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-close-icon {
@@ -725,7 +727,8 @@ input::placeholder {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-send:hover {
+.btn-send:hover, 
+.btn-send:focus {
     background-color: #404bbf;
 }
 
