--- a/css/styles.css
+++ b/css/styles.css
@@ -516,19 +516,24 @@ overflow: hidden;
     margin-bottom: 16px;
 }
 
-.form-label {
+.form {
     display: flex;
+    gap: 24px;
 }
 
 .form-input {
-    display: flex;
-    margin-right: 24px;
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 4px;
     width: 264px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding-left: 16px;
+    color: #ffffff;
+}
+
+input::placeholder {
+    color: #ffffff;
 }
 
 .form-btn {
@@ -599,7 +604,7 @@ input::placeholder {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -642,7 +647,6 @@ input::placeholder {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 24px;
     margin-bottom: 16px;
 }
 
@@ -666,7 +670,7 @@ input::placeholder {
     margin-bottom: 4px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
@@ -705,9 +709,7 @@ input::placeholder {
 }
 
 .btn-send {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
     border-radius: 4px;
     border: none;
     cursor: pointer;
