--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,9 @@ overflow: hidden;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     padding-left: 16px;
     color: #ffffff;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
 }
 
 input::placeholder {
@@ -540,7 +543,6 @@ input::placeholder {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 16px;
     border-radius: 4px;
     border: none;
     cursor: pointer;
@@ -564,15 +566,7 @@ input::placeholder {
 
 .form-btn-icon {
     fill: #ffffff;
-}
-
-input::placeholder {
-    padding-left: 8px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: #fff;
+    margin-left: 16px;
 }
 
 .backdrop {
