--- a/css/styles.css
+++ b/css/styles.css
@@ -634,6 +634,14 @@ input::placeholder {
     fill: #fff;
 }
 
+.modal-field {
+    margin-bottom: 8px;
+}
+
+.comment-modal {
+    margin-bottom: 16px;
+}
+
 .modal-title {
     font-weight: 500;
     font-size: 16px;
@@ -649,7 +657,6 @@ input::placeholder {
     border-radius: 4px;
     width: 360px;
     height: 40px;
-    margin-bottom: 8px;
     padding-left: 38px;
     outline: transparent;
     background-color: transparent;
@@ -677,7 +684,8 @@ input::placeholder {
 .modal-input-icon {
     position: absolute;
     left: 16px;
-    top: 11px;
+    top: 50%;
+    transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -690,8 +698,8 @@ input::placeholder {
     border-radius: 4px;
     width: 360px;
     height: 120px;
-    padding-top: 8px;
-    padding-left: 16px;
+    padding: 8px 16px;
+    background-color: transparent;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 400;
@@ -700,7 +708,10 @@ input::placeholder {
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     resize: none;
-    margin-bottom: 16px;
+}
+
+.modal-text:focus {
+    border-color: #4D5AE5;
 }
 
 .btn-send {
@@ -710,7 +721,6 @@ input::placeholder {
     cursor: pointer;
     padding: 16px 32px;
     margin: auto;
-    margin-top: 24px;
     min-width: 169px;
     height: 56px;
     background: #4d5ae5;
@@ -729,10 +739,12 @@ input::placeholder {
     background-color: #404bbf;
 }
 
+.checkbox-modal-field {
+    margin-bottom: 24px;
+}
+
 .check-text {
     position: relative;
-    display: flex;
-    align-items: center;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
