--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,8 @@ ul {
     margin: 0 auto;
 }
 
+/** ==============HEADER================ */
+
 .header {
     border-bottom: 1px solid #E7E9FC;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -133,6 +135,10 @@ color: #404bbf;
     color: #404bbf;
 }
 
+/** ============================== */
+
+/** ==============FIRST SECTION================ */
+
 .first-sect {
     background: #2e2f42;
     display: block;
@@ -146,7 +152,7 @@ color: #404bbf;
     background-size: cover;
 }
 
-h1 {
+.hero-title {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
@@ -179,6 +185,10 @@ h1 {
 .button-text:focus {
 background: #404bbf;
 }
+
+/** ============================== */
+
+/** ==============SECOND SECTION================ */
 
 .second-sect {
     padding-top: 120px;
@@ -253,19 +263,17 @@ background: #404bbf;
     color: #434455;
 }
 
+/** ============================== */
+
+/** ==============THIRD SECTION================ */
+
 .third-sect {
     background: #f4f4fd;
     padding-top: 120px;
     padding-bottom: 120px;
 }
 
-.third-list {
-    background: #ffffff;
-    border-radius: 0 0 4px 4px;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-
-.third-sect .title {
+.photo-subtitle {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -281,18 +289,24 @@ background: #404bbf;
     gap: 24px;
 }
 
-img {
+.photo-list-item {
+    background: #ffffff;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.team-image {
     display: block;
     max-width: 100%;
     height: auto;
 }
 
-.title-container {
+.title-wrap-container {
 padding-top: 32px;
 padding-bottom: 32px;
 }
 
-.photo-title {
+.photo-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -338,12 +352,16 @@ padding-bottom: 32px;
     background-color: #404BBF;
 }
 
+/** ============================== */
+
+/** ==============FOURTH SECTION================ */
+
 .fourth-sect {
     padding-top: 120px;
     padding-bottom: 120px;
 }
 
-.fourth-sect .title {
+.card-subtitle {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -354,22 +372,22 @@ padding-bottom: 32px;
     margin-bottom: 72px;
 }
 
-.card {
+.card-list {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
 }
 
-.card-list {
+.card-list-item {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-list:hover .card-cover-text{
+.card-list-item:hover .card-cover-text{
     transform: translateY(0);
 }
 
-.card-list:hover {
+.card-list-item:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
@@ -418,6 +436,10 @@ overflow: hidden;
     letter-spacing: 0.02em;
     color: #434455;
 }
+
+/** ============================== */
+
+/** ==============FOOTER================ */
 
 .ground {
     background: #2e2f42;
